--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+
+remote_theme: pmarsceill/just-the-docs
+
+
 title: 競プロ改
 description: A Jekyll theme for documentation
 baseurl: "/cpdocs" # the subpath of your site, e.g. /blog
