--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,9 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 # back_to_top: true
 # back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2017-2020 Patrick Marsceill. Distributed by an <a href=\"https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt\">MIT license.</a> <a href=\"https://www.netlify.com/\">This site is powered by Netlify.</a>"
+footer_content: |
+  Copyright &copy; 2017-2020 Patrick Marsceill. Distributed by an <a href=\"https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt\">MIT license.</a> <a href=\"https://www.netlify.com/\">This site is powered by Netlify.</a><br>
+  <a href="https://github.com/Kampachi-dev/cpdocs" target="_blank" rel="noopener noreferrer">cpdocs</a> is maintained by <a href="https://github.com/Kampachi-dev" target="_blank" rel="noopener noreferrer">Kampachi-dev</a>.
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
